fix beberapa masalah

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="homepagee.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="57x57" href="/favico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favico/apple-icon-60x60.png">
@@ -27,13 +30,13 @@
 <body>
 
     <div class="container">
-        <div class="main cf">
+        <div class="main">
             <div class="pp">
-                <img src="hehe.jpg" alt="pp-image">
+                <img src="img/hehe300x300.png" alt="pp-image">
             </div>
             <div class="deskripsi">
                 <h3>Hai! Aku <span>Albawid</span></h3>
-                <h1>Aku Seorang <span id="ketik">Tukang Ketik</span>,</h1>
+                <h1>Aku Seorang <br><span id="ketik">Tukang Ketik</span>,</h1>
                 <p>Yang suka menikmati hidup dengan santai dan segelas es teh tapi selalu punya niat belajar hal baru setiap harinya khususnya perkembangan teknologi atau mungkin yang biasa disebut "Technology Enthusiast".</p>
                 <div class="icon-sosmed">
                     <a href="https://twitter.com/Albawidd/" class="fa-brands fa-twitter" target="_blank"><i></i></a>
@@ -49,7 +52,7 @@
         </div>
 
         <div class="footer">
-            <p>Copyright 2023 Albawid.</p>
+            <p>Dibuat dengan <span class="fa fa-heart"><i></i></span><br>Copyright 2023 Albawid</p>
         </div>
 
     </div>
